--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="prism/prism.css">
-    <script src="prism/prism.js"></script>
+    <script src="prism.js"></script>
   </head>
   <body>
 		<div class="container">
