--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
 							$(document).ready(function() {
 								$('img.custom').zoomable({
 									padding: '120px',
-									bgcolor: 'hsl(240, 12%, 24%)',
+									bgcolor: 'hsl(208, 56%, 46%)',
 									opacity: 0.9,
 									blur:    '7px',
 									speed:   800,
-									border:  '23px solid hsl(208, 56%, 46%)',
+									border:  '23px #000',
 									radius:  '23px',
 									shadow:  '0 0 23px #000',
 								});
@@ -85,11 +85,11 @@
 								$(document).ready(function() {
 									$('img.custom').zoomable({
 										padding: '120px',
-										bgcolor: '#000000',
+										bgcolor: 'hsl(208, 56%, 46%)',
 										opacity: 0.5,
 										blur:    '7px',
 										speed:   800,
-										border:  '23px solid hsl(208, 56%, 46%)',
+										border:  '23px #000',
 										radius:  '23px',
 										shadow:  '0 0 23px #000',
 									});
