--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 									opacity: 0.9,
 									blur:    '7px',
 									speed:   800,
-									border:  '23px #000',
+									border:  '23px solid #000',
 									radius:  '23px',
 									shadow:  '0 0 23px #000',
 								});
@@ -89,7 +89,7 @@
 										opacity: 0.5,
 										blur:    '7px',
 										speed:   800,
-										border:  '23px #000',
+										border:  '23px solid #000',
 										radius:  '23px',
 										shadow:  '0 0 23px #000',
 									});
