--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
   	}
   	.page-header h1 {
   		font-weight: 800 !important;
+		font-size: 48px;
   	}
   	pre[class*="language-"] {
   		margin: 0 0 0.5em !important;
