--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		      <ul class="nav navbar-nav">     
 		      </ul>    
 		      <ul class="nav navbar-nav navbar-right">
-		        <li class="active"><a href="#">Examples <span class="sr-only">(current)</span></a></li>
+		        <li class="active"><a href="#">Demos & Examples <span class="sr-only">(current)</span></a></li>
 		        <li><a href="https://github.com/marando/zoomable.js">GitHub</a></li>         
 		      </ul>
 		    </div><!-- /.navbar-collapse -->
@@ -45,7 +45,7 @@
 
 			<section>					
 				<div class="row">					
-					<h1 class="col-sm-12">Examples</h1>
+					<h1 class="col-sm-12">Demos & Examples</h1>
 					<div class="example simple">
 						<h2 class="col-sm-12">Basic Example</h2>
 						<p class="col-sm-12">
