--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1, user-scalable=yes">
     <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
     <script src="zoomable.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
