--- a/examples/examples.html
+++ b/examples/examples.html
@@ -222,7 +222,7 @@
 						</tr>
 						<tr>
 							<td><kbd>onhide</kbd></td>
-							<td>function</td>s
+							<td>function</td>
 							<td>to be called when the image is hidden/dismissed.</td>
 						</tr>
 					</table>
