--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport"
-          content="width=device-width, initial-scale=1, user-scalable=yes">
+          content="width=device-width, initial-scale=1, user-scalable=yes">  
     <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
     <script src="zoomable.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -30,7 +30,7 @@
 		      <ul class="nav navbar-nav">     
 		      </ul>    
 		      <ul class="nav navbar-nav navbar-right">
-		        <li class="active"><a href="#">Demos & Examples <span class="sr-only">(current)</span></a></li>
+		        <li class="active"><a href="#">Examples <span class="sr-only">(current)</span></a></li>
 		        <li><a href="https://github.com/marando/zoomable.js">GitHub</a></li>         
 		      </ul>
 		    </div><!-- /.navbar-collapse -->
@@ -48,7 +48,7 @@
 
 			<section>					
 				<div class="row">					
-					<h1 class="col-sm-12">Demos & Examples</h1>
+					<h1 class="col-sm-12">Examples</h1>
 					<div class="example simple">
 						<h2 class="col-sm-12">Basic Example</h2>
 						<p class="col-sm-12">
@@ -167,6 +167,7 @@
 			<section class="row">
 				<div class="col-sm-12">
 					<h1>Documentation</h1>
+					<h2>Options</h2>
 					<table class="table table-bordered table-striped">
 						<tr>
 							<th>Property</th>
@@ -208,7 +209,26 @@
 							<td><code>200</code></td>
 							<td>speed of fade transitions</td>
 						</tr>						
-					</table>				
+					</table>	
+
+					<h2>Callbacks</h2>			
+					<table class="table table-bordered table-striped">
+						<tr>
+							<th>Property</th>
+							<th>Type</th>						
+							<th>Description</th>
+						</tr>
+						<tr>
+							<td><kbd>onshow</kbd></td>
+							<td>function</td>
+							<td>to be called when the image is shown</td>
+						</tr>
+						<tr>
+							<td><kbd>onhide</kbd></td>
+							<td>function</td>
+							<td>to be called when the image is hidden/dismissed.</td>
+						</tr>
+					</table>
 				</div>				
 			</section>
 
@@ -220,7 +240,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-6">
-						<div class="footer-header">zoomable.js</div>
+						<div class="footer-header">zoomable.js</div>						
 						<div class="footer-text">&copy; 2015 Ashley Marando</div>
 					</div>
 					<div class="col-sm-6">
