--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 								<code class="language-javascript">
 									$(document).ready(function() {
 										$('img.fill').zoomable({
-											position: 'fill'
+											fill: true
 										});
 									});
 								</code>
