--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, user-scalable=yes">  
     <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
-    <script src="../zoomable.js"></script>
+    <script src="zoomable.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="prism/prism.css">
-    <script src="prism/prism.js"></script>
+    <link rel="stylesheet" type="text/css" href="prism.css">
+    <script src="prism.js"></script>
   </head>
   <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
