edit examples page

--- a/examples/examples.html
+++ b/examples/examples.html
@@ -39,7 +39,7 @@
 
     <div class="container">   
       <div class="page-header">
-        <h1>zoomable.js <small>examples</small></h1>
+        <h1>zoomable.js <small>demo</small></h1>
       </div>
 
       <p class="lead">
