--- a/examples/examples.html
+++ b/examples/examples.html
@@ -30,7 +30,8 @@
           <ul class="nav navbar-nav">     
           </ul>    
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">Examples <span class="sr-only">(current)</span></a></li>
+            <li class="active"><a href="#examples">Examples <span class="sr-only">(current)</span></a></li>
+            <li><a href="#api-documentation">Documentation</a></li>
             <li><a href="https://github.com/marando/zoomable.js">GitHub</a></li>         
           </ul>
         </div><!-- /.navbar-collapse -->
@@ -39,20 +40,22 @@
 
     <div class="container">   
       <div class="page-header">
-        <h1>zoomable.js <small>demo</small></h1>
+        <h1>zoomable.js</h1>
+      <p class="lead">
+        A simple way to zoom images with jQuery
+      </p>
       </div>
 
-      <p class="lead">
-        zoomable.js is a simple way to zoom images with jQuery.
-      </p>
+
 
       <section>         
         <div class="row">         
-          <h1 class="col-sm-12">Usage Examples</h1>
+          <a name="examples" class="examples"></a>
+          <h1 class="col-sm-12">Examples</h1>
           <div class="example simple">
-            <h2 class="col-sm-12">Simple Usage</h2>
+            <h2 class="col-sm-12">Default Configuration</h2>
             <p class="col-sm-12">
-              In the below example the plugin is applied to all <code>&lt;img&gt;</code> elements on the page. The plugin will use each element's <code>src</code> property for full-size image.
+              The simplest way to use zoomable.js is to call the plugin on any jQuery selector:
             </p>            
             <div class="col-sm-5">          
               <img src="http://lorempixel.com/1200/800/?r=1" 
@@ -84,7 +87,7 @@
           <div class="example custom">
             <h2 class="col-sm-12">Custom Options</h2>
             <p class="col-sm-12">
-              In this example the plugin is applied using custom options to change the default appearance:
+              Custom options can be supplied to change the default appearance:
             </p>            
             <div class="col-sm-5">
               <img src="http://lorempixel.com/1200/800/?r=2" 
@@ -206,9 +209,9 @@
 
         <div class="row">         
           <div class="example simple">
-            <h2 class="col-sm-12">Alternate Full Size Image</h2>
+            <h2 class="col-sm-12">Alternate Full Sized Image</h2>
             <p class="col-sm-12">
-              The full sized image can be specified by adding a <code>fullsize</code> attribute on the <code>&lt;img&gt;</code> element, which is useful for situations where you want to use a different image for the thumbnail.
+              An alternate full sized image can be specified by providing a <code>fullsize</code> attribute on the <code>&lt;img&gt;</code> element:
             </p>            
             <div class="col-sm-12">
               <pre>
@@ -224,8 +227,9 @@
 
       <section class="row">
         <div class="col-sm-12">
+          <a name="api-documentation" class="api-documentation"></a>
           <h1>API Documentation</h1>
-          <h2>Plugin Options</h2>
+          <h2>Appearance Options</h2>
           <table class="table table-bordered table-striped">
             <tr>
               <th>Property</th>
@@ -274,7 +278,7 @@
             </tr>           
           </table>  
 
-          <h2>Plugin Callbacks</h2>      
+          <h2>Callback Functions</h2>      
           <table class="table table-bordered table-striped">
             <tr>
               <th>Property</th>
@@ -304,7 +308,7 @@
         <div class="row">
           <div class="col-sm-6">
             <div class="footer-header">zoomable.js</div>            
-            <div class="footer-text">&copy; 2015 Ashley Marando</div>
+            <div class="footer-text">&copy;2015 Ashley Marando</div>
           </div>
           <div class="col-sm-6">
             
@@ -331,7 +335,7 @@
       font-weight: 500;
     }
     h2 {
-      font-weight: 500;
+      font-weight: 300;
     }
     h1 {
       font-weight: 700;
@@ -351,7 +355,7 @@
     }
     .navbar-brand {
       font-weight: 700;
-      //display: none;
+      display: none;
     }
     table td:nth-child(2) {
       //font-family: 'Roboto Mono';
@@ -377,6 +381,13 @@
     .footer-text {
       color: hsl(0, 3%, 61%);
       font-size: 16px;
+    }
+
+    a.examples, a.api-documentation {
+      display: block;
+      position: relative;
+      top: -50px;
+      visibility: hidden;
     }
   </style>
 
