--- a/examples/examples.html
+++ b/examples/examples.html
@@ -228,7 +228,7 @@
       <section class="row">
         <div class="col-sm-12">
           <a name="api-documentation" class="api-documentation"></a>
-          <h1>API Documentation</h1>
+          <h1>Documentation</h1>
           <h2>Appearance Options</h2>
           <table class="table table-bordered table-striped">
             <tr>
